Overlapping solved

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ a.button3:hover {
   }
 }
 
-.image {
+.in_image {
   display: inline-block;
 }
 
